[+] LINT, Formatting, and Controller import from api-express

--- a/react-front/index.html
+++ b/react-front/index.html
@@ -2,15 +2,15 @@
 <html lang="fr">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>MMI - VisioConf</title>
+    <meta charset="UTF-8"/>
+    <link href="/vite.svg" rel="icon" type="image/svg+xml"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>MMI - VisioConf</title>
 </head>
 
 <body>
-  <div id="root"></div>
-  <script type="module" src="/src/index.jsx"></script>
+<div id="root"></div>
+<script src="/src/index.jsx" type="module"></script>
 </body>
 
 </html>
